# local-llm

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: app.h  cli.h  dataset_manager.h  fine_tuning_engine.h  inference_server.h  model_manager.h  types.h  utils.h  version.h.in
src/: app.cpp  cli.cpp  dataset_manager.cpp  fine_tuning_engine.cpp  inference_server.cpp  main.cpp  model_manager.cpp  types.cpp  utils.cpp
